--- a/select.html
+++ b/select.html
@@ -81,12 +81,10 @@ input[type="text"] {
             <label>Значение</label><div> 1: </div><input type="text" name="col1" placeholder="Первый парам..." />
             <label>Значение</label><div> 2: </div><input type="text" name="col2" placeholder="Второй парам..." />
             <label>Значение</label><div> 3: </div><input type="text" name="col3" placeholder="Третий парам..." />
-            <label>Значение</label><div> 4: </div><input type="text" name="col4" placeholder="Третий пара..." />
-            <label>Значение</label><div> 5: </div><input type="text" name="col5" placeholder="Третий пара..." />
-            <label>Значение</label><div> 6: </div><input type="text" name="col6" placeholder="Третий пара..." />
-            <label>Значение</label><div> 7: </div><input type="text" name="col7" placeholder="Третий пара..." />
-            <label>Значение</label><div> 8: </div><input type="text" name="col8" placeholder="Третий пара..." />
-            <label>Значение</label><div> 9: </div><input type="text" name="col9" placeholder="Третий пара..." />
+            <label>Значение</label><div> 4: </div><input type="text" name="col4" placeholder="..." />
+            <label>Значение</label><div> 5: </div><input type="text" name="col5" placeholder="..." />
+            <label>Значение</label><div> 6: </div><input type="text" name="col6" placeholder="..." />
+            <label>Значение</label><div> 7: </div><input type="text" name="col7" placeholder="..." />
             <input type="submit" value="Добавить" />
         </form>
 		<br />
